@@ -17,6 +17,7 @@ import org.elasticsearch.action.ActionType;
 import org.elasticsearch.action.FailedNodeException;
 import org.elasticsearch.action.TaskOperationFailure;
 import org.elasticsearch.action.support.ActionFilters;
+import org.elasticsearch.action.support.SubscribableListener;
 import org.elasticsearch.action.support.tasks.BaseTasksRequest;
 import org.elasticsearch.action.support.tasks.BaseTasksResponse;
 import org.elasticsearch.action.support.tasks.TasksRequestBuilder;
@@ -66,8 +67,11 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import static java.util.Objects.requireNonNull;
+import static org.elasticsearch.test.ESTestCase.TEST_REQUEST_TIMEOUT;
 import static org.elasticsearch.test.ESTestCase.assertBusy;
+import static org.elasticsearch.test.ESTestCase.randomAlphaOfLength;
 import static org.elasticsearch.test.ESTestCase.randomBoolean;
+import static org.elasticsearch.test.ESTestCase.randomUUID;
 import static org.elasticsearch.xcontent.ConstructingObjectParser.constructorArg;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
@@ -99,14 +103,18 @@ public class TestPersistentTasksPlugin extends Plugin implements ActionPlugin, P
         IndexNameExpressionResolver expressionResolver
     ) {
         final var scope = PERSISTENT_TASK_SCOPE_SETTING.get(settingsModule.getSettings());
-        return Collections.singletonList(new TestPersistentTasksExecutor(clusterService, scope));
+        return List.of(
+            new TestPersistentTasksExecutor(TestPersistentTasksExecutor.NAME, clusterService, scope),
+            new TestPersistentTasksExecutor(TestPersistentTasksExecutor.CLUSTER_NAME, clusterService, PersistentTasksExecutor.Scope.CLUSTER)
+        );
     }
 
     @Override
     public List<NamedWriteableRegistry.Entry> getNamedWriteables() {
         return Arrays.asList(
             new NamedWriteableRegistry.Entry(PersistentTaskParams.class, TestPersistentTasksExecutor.NAME, TestParams::new),
-            new NamedWriteableRegistry.Entry(PersistentTaskState.class, TestPersistentTasksExecutor.NAME, State::new)
+            new NamedWriteableRegistry.Entry(PersistentTaskState.class, TestPersistentTasksExecutor.NAME, State::new),
+            new NamedWriteableRegistry.Entry(PersistentTaskParams.class, TestPersistentTasksExecutor.CLUSTER_NAME, TestClusterParams::new)
         );
     }
 
@@ -122,6 +130,11 @@ public class TestPersistentTasksPlugin extends Plugin implements ActionPlugin, P
                 PersistentTaskState.class,
                 new ParseField(TestPersistentTasksExecutor.NAME),
                 State::fromXContent
+            ),
+            new NamedXContentRegistry.Entry(
+                PersistentTaskParams.class,
+                new ParseField(TestPersistentTasksExecutor.CLUSTER_NAME),
+                TestClusterParams::fromXContent
             )
         );
     }
@@ -129,6 +142,49 @@ public class TestPersistentTasksPlugin extends Plugin implements ActionPlugin, P
     @Override
     public List<Setting<?>> getSettings() {
         return List.of(PERSISTENT_TASK_SCOPE_SETTING);
+    }
+
+    /**
+     * Starts a {@link TestPersistentTasksExecutor#NAME} task in the given project with random id and params.
+     */
+    public static SubscribableListener<PersistentTask<TestParams>> startProjectTask(PersistentTasksService service, ProjectId projectId) {
+        return SubscribableListener.newForked(
+            l -> service.sendProjectStartRequest(
+                projectId,
+                randomUUID(),
+                TestPersistentTasksExecutor.NAME,
+                new TestParams(randomAlphaOfLength(5)),
+                TEST_REQUEST_TIMEOUT,
+                l
+            )
+        );
+    }
+
+    /**
+     * Starts a {@link TestPersistentTasksExecutor#CLUSTER_NAME} task with random id and params.
+     */
+    public static SubscribableListener<PersistentTask<TestClusterParams>> startClusterTask(PersistentTasksService service) {
+        return SubscribableListener.newForked(
+            l -> service.sendClusterStartRequest(
+                randomUUID(),
+                TestPersistentTasksExecutor.CLUSTER_NAME,
+                new TestClusterParams(randomAlphaOfLength(5)),
+                TEST_REQUEST_TIMEOUT,
+                l
+            )
+        );
+    }
+
+    public static SubscribableListener<PersistentTask<?>> removeProjectTask(
+        PersistentTasksService service,
+        ProjectId projectId,
+        String taskId
+    ) {
+        return SubscribableListener.newForked(l -> service.sendProjectRemoveRequest(projectId, taskId, TEST_REQUEST_TIMEOUT, l));
+    }
+
+    public static SubscribableListener<PersistentTask<?>> removeClusterTask(PersistentTasksService service, String taskId) {
+        return SubscribableListener.newForked(l -> service.sendClusterRemoveRequest(taskId, TEST_REQUEST_TIMEOUT, l));
     }
 
     public static class TestParams implements PersistentTaskParams {
@@ -237,6 +293,30 @@ public class TestPersistentTasksPlugin extends Plugin implements ActionPlugin, P
 
     }
 
+    /**
+     * Params for the {@link TestPersistentTasksExecutor#CLUSTER_NAME} task; a separate type is needed only because the writeable
+     * name must match the task name.
+     */
+    public static class TestClusterParams extends TestParams {
+
+        public TestClusterParams(String testParam) {
+            super(testParam);
+        }
+
+        public TestClusterParams(StreamInput in) throws IOException {
+            super(in);
+        }
+
+        @Override
+        public String getWriteableName() {
+            return TestPersistentTasksExecutor.CLUSTER_NAME;
+        }
+
+        public static TestClusterParams fromXContent(XContentParser parser) throws IOException {
+            return new TestClusterParams(TestParams.fromXContent(parser).getTestParam());
+        }
+    }
+
     public static class State implements PersistentTaskState {
 
         private final String phase;
@@ -306,13 +386,22 @@ public class TestPersistentTasksPlugin extends Plugin implements ActionPlugin, P
         private static final Logger logger = LogManager.getLogger(TestPersistentTasksExecutor.class);
 
         public static final String NAME = "cluster:admin/persistent/test";
+        /**
+         * A second registration of this executor that is always cluster-scoped (the scope of {@link #NAME} is fixed per node by
+         * {@link #PERSISTENT_TASK_SCOPE_SETTING}), so tests can run cluster and project tasks side by side. Uses {@link TestClusterParams}.
+         */
+        public static final String CLUSTER_NAME = "cluster:admin/persistent/test_cluster";
         private final ClusterService clusterService;
         private final Scope scope;
 
         private static volatile boolean nonClusterStateCondition = true;
 
         public TestPersistentTasksExecutor(ClusterService clusterService, Scope scope) {
-            super(NAME, clusterService.threadPool().generic());
+            this(NAME, clusterService, scope);
+        }
+
+        public TestPersistentTasksExecutor(String name, ClusterService clusterService, Scope scope) {
+            super(name, clusterService.threadPool().generic());
             this.clusterService = clusterService;
             this.scope = scope;
         }
